Fixed mobile responsive

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="http://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="guides.css">
@@ -56,11 +56,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">10 Awards</div>
+                                    <div class="title mt-3">10 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">128 Reviews</div>
+                                    <div class="title mt-3">128 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -111,11 +111,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">3 Awards</div>
+                                    <div class="title mt-3">3 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">52 Reviews</div>
+                                    <div class="title mt-3">52 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                             </div>
                         </div>
@@ -164,11 +164,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">6 Awards</div>
+                                    <div class="title mt-3">6 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">78 Reviews</div>
+                                    <div class="title mt-3">78 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -219,11 +219,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">2 Awards</div>
+                                    <div class="title mt-3">2 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">14 Reviews</div>
+                                    <div class="title mt-3">14 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -276,11 +276,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">21 Awards</div>
+                                    <div class="title mt-3">21 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">198 Reviews</div>
+                                    <div class="title mt-3">198 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -331,11 +331,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">6 Awards</div>
+                                    <div class="title mt-3">6 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">99 Reviews</div>
+                                    <div class="title mt-3">99 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -388,11 +388,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">8 Awards</div>
+                                    <div class="title mt-3">8 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">86 Reviews</div>
+                                    <div class="title mt-3">86 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                             </div>
                         </div>
@@ -439,11 +439,11 @@
                             <div class="stats">
                                 <div>
                                     <i class="fa fa-award"></i>
-                                    <div class="title mt-3">7 Awards</div>
+                                    <div class="title mt-3">7 <span class="mobile-hide">Awards</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-star"></i>
-                                    <div class="title mt-3">32 Reviews</div>
+                                    <div class="title mt-3">32 <span class="mobile-hide">Reviews</span></div>
                                 </div>
                                 <div>
                                     <i class="fas fa-check-circle"></i>
@@ -454,7 +454,8 @@
                     </div>
                     <div class="general">
                         <h1>James</h1>
-                        <p>My name is James and I am a professional golfer. Let me take you to the best golf courses in the city and give you tips on your game.</p>
+                        <p>My name is James and I am a professional golfer. Let me take you to the best golf courses in
+                            the city and give you tips on your game.</p>
                         <span class="more text-white bg-info p-2">Mouse over for more info</span>
                     </div>
                 </div>
@@ -465,13 +466,13 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
