--- a/index.html
+++ b/index.html
@@ -8,19 +8,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Travel Website</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Lost In VietNam</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto ">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Meet A Local
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Ho Chi Minh</a>
+                        <a class="dropdown-item" href="#">Ha Noi</a>
+                        <a class="dropdown-item" href="#">Da Nang</a>
+                        <a class="dropdown-item" href="#">Nha Trang</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+
+
+            <button class="btn btn-outline-success my-2 my-sm-0 mr-3 btn-duy-login" type="submit">Login</button>
+            <button class="btn btn-outline-success my-2 my-sm-0 active btn-duy-register" type="submit">Register</button>
+
+        </div>
+    </nav>
+
+    <footer class="pt-4 my-md-5 pt-md-5 border-top BG-footer mobile-footer-duy">
+        <div class="container">
+            <div class="row">
+                <div class="col-md col-sm-12">
+                    <img class="mb-2" src="#" alt="" width="24" height="24">
+                    <small class="d-block mb-3 text-muted">&copy; 2020</small>
+                </div>
+                <div class="col-md col-sm-6">
+                    <h5 class="makecolor">GETTING STATED</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted makecolor-ul" href="#">About Us</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Sign Up As a local</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Press</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="col-md col-sm-6">
+                    <h5 class="makecolor">Resources</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted makecolor-ul" href="#">Booking Advice</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Advice for a Local</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Review & Rating</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Countries</a></li>
+                    </ul>
+                </div>
+                <div class="col-md col-sm-6">
+                    <h5 class="makecolor">Policies</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted makecolor-ul" href="#">Terms of Service</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Privacy Policy</a></li>
+                        <li><a class="text-muted makecolor-ul" href="#">Security</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md col-sm-6 footer-icons">
+                    <i class="fab fa-instagram morecolor mr-2 duy-icon"></i>
+                    <i class="fab fa-facebook morecolor mr-2 duy-icon"></i>
+                    <i class="fab fa-twitter makecolor-twiter mr-2 duy-icon"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
