--- a/index.html
+++ b/index.html
@@ -574,12 +574,22 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
+                  <div class="carousel-item-content">
+                      <h2>ADVENTURES WITH JULIA IN KIEV</h2>
+                      <i class="fab fa-youtube"></i>
+                  </div>
                 <img class="d-block w-100" src="https://www.showaround.com/src/images/b0c985a760971616f576e5dfb693099a.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
+                <div class="carousel-item-content">
+                    <h2>NOTHING STOPS DETROITS</h2>
+                </div>
                 <img class="d-block w-100" src="https://www.showaround.com/src/images/b0c985a760971616f576e5dfb693099a.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
+                <div class="carousel-item-content">
+                    <h2>THE FAMED CUBAN NEIGHBOURHOOD</h2>
+                </div>
                 <img class="d-block w-100" src="https://www.showaround.com/src/images/b0c985a760971616f576e5dfb693099a.jpg" alt="Third slide">
               </div>
             </div>
