--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mr-5">
@@ -599,7 +599,7 @@
 
                         </div>
                     </div>
-                    <img class="d-block w-100" src="https://www.showaround.com/src/images/b0c985a760971616f576e5dfb693099a.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="https://static.asiawebdirect.com/m/bangkok/portals/vietnam/homepage/hue/pagePropertiesImage/hue-city.jpg.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-item-content">
@@ -613,7 +613,7 @@
 
                         </div>
                     </div>
-                    <img class="d-block w-100" src="https://assets.vogue.com/photos/589201627edfa70512d68c37/master/pass/img-diane-keaton-the-big-picture_164207196441.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="https://www.featurepics.com/StockImage/20150228/nha-trang-city-stock-picture-3486209.jpg" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
