--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
+    <script src="https://kit.fontawesome.com/a8c4c24db6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -16,6 +17,10 @@
     <link rel="stylesheet" type="text/css" href="exp.css">
     <link rel="stylesheet" type="text/css" href="nav-footer.css">
     <script type="text/javascript" src="./javascript.js"></script>
+    <!-- AOS link-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS link-->
     <title>Lost in Vietnam</title>
 </head>
 
@@ -65,7 +70,7 @@
 
 
     <!--Ji section - Cards-->
-    <section class="guildes-section">
+    <section data-aos="fade-up" class="guildes-section">
         <h3 class="section-title">Find your local tour guide with Showaround</h3>
         <div class="container">
             <div class="cards-wrapper">
@@ -307,7 +312,7 @@
         </div>
     </div>
     <!--Ji section - Cards-->
-    <section class="guildes-section">
+    <section data-aos="fade-up" class="guildes-section">
         <h3 class="section-title">Find your local tour guide with Showaround</h3>
         <div class="container">
             <div class="cards-wrapper">
@@ -628,7 +633,7 @@
     </section>
 
     <!--Ti section - Exp-->
-    <section class="exp-section" style="margin-bottom: 30px;">
+    <section data-aos="fade-up" class="exp-section" style="margin-bottom: 30px;">
         <div class="container">
             <h3 class="section-title">Recent booking</h3>
 
@@ -715,7 +720,7 @@
         </div>
     </section>
     <!--Ti section - Exp-->
-    <section class="show-around-story">
+    <section data-aos="fade-up" class="show-around-story">
         <div class="container">
             <h3 class="section-title" style="text-align: center;
             margin: 10px 0;
