Logo an d favicon implementation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="guides.css">
     <link rel="stylesheet" type="text/css" href="exp.css">
     <link rel="stylesheet" type="text/css" href="nav-footer.css">
+    <link rel="shortcut icon" type="image/png" href="img/liv-favicon.png"/>
     <script type="text/javascript" src="./javascript.js"></script>
     <!-- AOS link-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -28,7 +29,7 @@
     <!--Duy section - Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light  ">
         <div class="container">
-            <a class="navbar-brand" href="#">Lost In VietNam</a>
+            <img class="navbar-brand" src="img/liv-logo.png" alt="liv logo" />
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -747,8 +748,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md col-sm-12">
-                    <img class="mb-2" src="#" alt="" width="24" height="24">
-                    <small class="d-block mb-3 text-muted">&copy; 2020</small>
+                    <img class="mb-2 navbar-brand" src="img/liv-logo.png" alt="liv logo">
                 </div>
                 <div class="col-md col-sm-6 text-left">
                     <h5 class="makecolor">GETTING STATED</h5>
