--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                             <a class="dropdown-item" href="#">Ha Noi</a>
                             <a class="dropdown-item" href="#">Da Nang</a>
                             <a class="dropdown-item" href="#">Nha Trang</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <!-- <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mr-5">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
 
                 </ul>
