--- a/index.html
+++ b/index.html
@@ -831,7 +831,8 @@
      <div class="showMore">
         <button class="btn-showMore">Show More</button>
      </div>
- </div>
+     </div>
+ 
 
  
 
@@ -876,7 +877,7 @@
 
     <!--Duy section - Footer-->
     <footer class="pt-4  pt-md-5 border-top BG-footer mobile-footer-duy">
-        
+        <div class="container">
             <div class="row">
                 <div class="col-md col-sm-12">
                     <img class="mb-2 navbar-brand" src="img/liv-logo.png" alt="liv logo">
@@ -914,7 +915,7 @@
                     <i class="fab fa-twitter makecolor-twiter mr-2 duy-icon"></i>
                 </div>
             </div>
-        
+        </div>
     </footer>
     <!--Duy section - Footer-->
 
