RFixed responsive issues on cards and also removed hotlinks to profile pictures. Edited some content language as well as remove the +more in experiences

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
         <div class="about-us-banner-content">
             <div class="container">
                 <h1>ABOUT US</h1>
-                <p>WE ASPIRE TO CHANGE THE CONCEPT OF TRAVELLING BY MAKING IT MORE AUTHENTIC, MORE LOCAL.</p>
+                <p>WE ASPIRE TO CHANGE THE CONCEPT OF TRAVELING BY MAKING IT MORE AUTHENTIC, MORE LOCAL.</p>
             </div>
 
         </div>
