Fixed broken image link

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <span class="points center badge badge-pill badge-success">$16 per hour</span>
                             <div class="center">
                                 <img class="img-guide rounded-circle z-depth-2"
-                                    src="img/guide-nina"
+                                    src="img/guide-nina.jpg"
                                     data-holder-rendered="true" />
                             </div>
                         </div>
