Stored carousel and background image locally

--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
                         <div class="carousel-item minh-carousel-item active">
 
 
-                            <img src="https://www.showaround.com/src/images/d331490e887b6a63f83000a5f0835350.png"
+                            <img src="img/jumbotron-carousel1.png"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item minh-carousel-item">
 
-                            <img src="https://www.showaround.com/src/images/8f9d80fd6d09a5d4232d83e26f760308.png"
+                            <img src="img/jumbotron-carousel2.png"
                                 alt="...">
 
                         </div>
                         <div class="carousel-item minh-carousel-item">
 
-                            <img src="https://www.showaround.com/src/images/f5b965f85d0858ec13cc2e7acc268217.png"
+                            <img src="img/jumbotron-carousel3.png"
                                 alt="...">
 
                         </div>
