--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <!--Ji section - Cards-->
     <section data-aos="fade-up" class="guildes-section">
-        <h3 class="section-title">Find your local tour guide with Showaround</h3>
+        <h3 class="section-title">Find your local tour guide with us!</h3>
         <div class="container">
             <div class="cards-wrapper">
                 <div class="guides-card">
@@ -433,7 +433,7 @@
     </div>
     <!--Ji section - Cards-->
     <section data-aos="fade-up" class="guildes-section">
-        <h3 class="section-title">Find your local tour guide with us!</h3>
+        <h3 class="section-title"></h3>
         <div class="container">
             <div class="cards-wrapper">
                 <div class="guides-card">
