Bottom padding for footer in responsive

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md col-sm-6 footer-icons">
+                <div class="col-md col-sm-6 footer-icons mb-4">
                     <i class="fab fa-instagram morecolor mr-2 duy-icon"></i>
                     <i class="fab fa-facebook morecolor mr-2 duy-icon"></i>
                     <i class="fab fa-twitter makecolor-twiter mr-2 duy-icon"></i>
