--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
                             <a class="dropdown-item" href="#">Ha Noi</a>
                             <a class="dropdown-item" href="#">Da Nang</a>
                             <a class="dropdown-item" href="#">Nha Trang</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <!-- <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a> -->
                         </div>
                     </li>
                     <li class="nav-item">
