--- a/exp.html
+++ b/exp.html
@@ -26,7 +26,7 @@
                             
                                 <h4>Dreamile</h4>
                                 <h1>Da Nang, Vietnam</h1>
-                                <p>We should choose a rabbit than a carrot</p><br>
+                                <p>We should choose a rabbit than a carrot</p><br class="disappear-mobile">
                                 <button class="btn-readMore">Read more</button>
                             
                         </div>
