--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.1.0/css/flag-icon.min.css" rel="stylesheet">
+    <script src="jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="guides.css">
     <link rel="stylesheet" type="text/css" href="exp.css">
     <link rel="stylesheet" type="text/css" href="nav-footer.css">
     <link rel="stylesheet" type="text/css" href="jumbotron.css">
     <link rel="shortcut icon" type="image/png" href="img/liv-favicon.png" />
+    
     <script type="text/javascript" src="./javascript.js"></script>
     <!-- AOS link-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -87,6 +89,13 @@
     <!--Duy section - Navbar-->
     <!--Minh section-jumbotron-->
     <div class="empty" style="height:83px"></div>
+    <div id="main-content" class="pre-loading">
+        <div class="loader">
+            <span class="fas fa-spinner xoay icon"></span>
+         </div>
+         <div class="content">
+
+        
     <section class="Minh-section">
         <div class="jumbotron-background-img"></div>
         <div class="container" style="display: flex;">
@@ -914,6 +923,8 @@
             </div>
         </div>
     </footer>
+</div>
+</div>
     <!--Duy section - Footer-->
 
 
