--- a/about.html
+++ b/about.html
@@ -171,8 +171,7 @@
                                     </li>
                                     <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                                     <li>Scrum Master</li>
-                                    <li><em>"Anybody can write code that a computer can understand. Good programmers
-                                            write code that humans can understand."</em></li>
+                                    <li><em>"Không có gì quý hơn độc lập, tự do, hạnh phúc"</em></li>
                                 </ul>
                             </div>
                             <div class="img-wrapper">
